kubernetes/cluster0/apps/networking/external-dns/app/cilium-network-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-dns-allow-kube-apiserver
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-dns
  egress:
    - toEntities:
        - kube-apiserver
